--- a/imageGallery.html
+++ b/imageGallery.html
@@ -18,8 +18,8 @@
         <nav id="navigation" data-visible="false">
             <ul class="nav-list">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="imagegallery.html">Image Gallery</a></li>
-                <li><a href="videogallery.html">Video Gallery</a></li>
+                <li><a href="imageGallery.html">Image Gallery</a></li>
+                <li><a href="videoGallery.html">Video Gallery</a></li>
                 <li><a href="slideshow.html">Slideshow</a></li>
             </ul>
         </nav>
